# WRFv4.0_JEDI

frame/: module_domain.F  module_integrate.F  module_nesting.F
main/: module_wrf_top.F
phys/: module_mp_thompson.F  module_ra_rrtmg_lw.F  module_ra_rrtmg_sw.F
share/: input_wrf.F  mediation_integrate.F  output_wrf.F  set_timekeeping.F  start_domain.F
wrfjedi/: CMakeLists.txt
wrfjedi/main/: CMakeLists.txt  wrfjedi.f90  wrfjedi_finalize.f90  wrfjedi_init.f90  wrfjedi_module_integrate.f90  wrfjedi_run.f90
